k8s/ln-ads/ads/deployment-fr24feed.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fr24feed
  namespace: ln-ads
spec:
  selector:
    matchLabels:
      app: fr24feed
  replicas: 1
  template:
    metadata:
      labels:
        app: fr24feed
    spec:
      containers:
        - name: fr24feed
          image: mikenye/fr24feed:latest
          # command: ["config/", "dashboard"]
          tty: true
          ports:
          - containerPort: 8754
            protocol: TCP
            name: http
          resources:
            requests:
              memory: "50Mi"
              cpu: "100m"
            limits:
              memory: "250Mi"
              cpu: "500m"
