k8s/ln-ads/ads/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dump1090
spec:
  selector:
    matchLabels:
      app: dump1090
  replicas: 1
  serviceName: "dump1090"
  template:
    metadata:
      labels:
        app: dump1090
    spec:
      nodeSelector:
        k8s.partyparrot.moe/hardware_ads: "true"
      containers:
        - name: dump1090
          image: thomx/fr24feed-piaware:latest
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 8080
            protocol: TCP
            name: http
          resources:
            requests:
              memory: "50Mi"
              cpu: "500m"
            limits:
              memory: "200Mi"
              cpu: "1"
          securityContext:
            privileged: true
            procMount: Default
          volumeMounts:
          - name: usb-ads-b
            mountPath: /dev/bus/usb
          # livenessProbe:
          #   httpGet:
          #    path: /
          #    port: 8080
          #  initialDelaySeconds: 20
          #  periodSeconds: 5
      volumes:
      - name: usb-ads-b
        hostPath:
          path: /dev/bus/usb
          type: Directory
