k8s/ln-ads/ads/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-http-prod
    traefik.ingress.kubernetes.io/router.middlewares: identity-system-traefik-forward-auth@kubernetescrd
  name: ads-ingress
spec:
  rules:
  - host: ads.home.theleachfamily.me.uk
    http: &http_rules
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tar1090
            port:
              name: http
  - host: ads.home.theleachfamily.me.uk
    http: *http_rules
  tls:
  - hosts:
    - ads.home.theleachfamily.me.uk
    secretName: ads-cert
